fixing bug with flickering modals by setting fixed height

--- a/src/components/ConfirmModal.css
+++ b/src/components/ConfirmModal.css
@@ -1,3 +1,4 @@
 .confirm-modal.ui.modal {
-    top: 30%;
+    top: 20%;
+    height: 300px;
 }
